syntax = "proto3";

package ImageTransmission;

service TransmitImageAndData {
    // Image Transmission RPC.
    //
    // Sends a payload containing the image and metadata
    //   including timestamp and GPS coordinates.
    // Future implementations might use 'streams' to
    //   better handle chunking or customize chunk sizes.

    rpc SendData (ImageDataRequest) returns (ImageDataResponse) {}
}

message ImageDataRequest {
    // Send a message containing some identifier.
    //
    // This identifier is probably going to be ignored,
    //   just used to send some data in the request.

    string request_id = 1;
}

message ImageDataResponse {
    // Send the image and required metadata.
    //
    // The identifier should be the same as the request,
    //   but will probably be ignored.
    // If error code is set, no image data is sent. This
    //   may be changed to just send the last image taken
    //   regardless of transmit status.

    string request_id  = 1;
    int32  status_code = 2;
    string time_stamp  = 3;
    string nmea_gprmc  = 4;
    bytes  image_data  = 5;
}
